headless: Write crash dumps to temporary directory by default

Instead of using the current or the binary directory for crash dumps,
write them to the system temporary directory because the former
directories may not be writeable. Note that you can override this
behavior with --crash-dumps-dir.

BUG=772920

Change-Id: I27c9edf58cd01082ce6d807c16ff5d6bffee791d
Reviewed-on: https://chromium-review.googlesource.com/708273
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Commit-Queue: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507632}
Former-commit-id: 0f7e111b6e05496c3b559d87cd2146d6387b9e13